[package]
name = "meme_decoder"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen       = "0.2"                # JS interop
serde               = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen  = "0.4"                # efficient JsValue ↔ Serde serialization :contentReference[oaicite:3]{index=3}
borsh               = "0.10"               # Rust Borsh implementation for Anchor data :contentReference[oaicite:4]{index=4}
bs58                = "0.4"                # Base58 encoding for public keys :contentReference[oaicite:5]{index=5}
