[package]
name = "meme_decoder"
version = "0.1.0"
edition = "2021"
description = "A WebAssembly (WASM) library for decoding Solana meme token creation instructions from various platforms."
repository = "https://github.com/Gh05d/meme-decoder"
license = "UNLICENSE-1.1"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen       = "0.2"                # JS interop
serde               = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen  = "0.4"                # efficient JsValue ↔ Serde serialization :contentReference[oaicite:3]{index=3}
borsh               = "0.10"               # Rust Borsh implementation for Anchor data :contentReference[oaicite:4]{index=4}
bs58                = "0.4"                # Base58 encoding for public keys :contentReference[oaicite:5]{index=5}
serde_json = "1.0"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3", features = ["console"] }
js-sys      = "0.3"     # for js_sys::BigInt, Object, Reflect
